--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background: url('c.png') no-repeat center center/cover;
+    background: url('images/c.png') no-repeat center center/cover;
     position: relative;
 }
 
