--- a/s2/style.css
+++ b/s2/style.css
@@ -55,7 +55,7 @@ h3 {
 
 /* Styling for h5 */
 h5 {
-    color: cyan; /* Change to any color you prefer */
+    color:orchid; /* Change to any color you prefer */
     font-size: 25px;
 }
 
