--- a/F/style.css
+++ b/F/style.css
@@ -28,13 +28,13 @@ body {
     top: 10px;
     left: 10px;
     width: 45vw; /* Responsive width */
-    max-width: 400px;
+    max-width: 280px;
     height: auto;
 }
 
 /* Main Heading */
 h2 {
-    font-size: 6vw; /* Adjusts with screen width */
+    font-size: 5.5vw; /* Adjusts with screen width */
     font-weight: bold;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     margin: 20px 0;
@@ -91,6 +91,7 @@ h5 {
     position: absolute;
     bottom: 10px;
     width: 100%;
+    height: 6%;
     text-align: center;
 }
 
@@ -99,7 +100,7 @@ h5 {
     font-weight: bold;
     color: white;
     background: rgba(0, 0, 0, 0.5);
-    padding: 5px 15px;
+    padding: 2px 2px;
     border-radius: 5px;
 }
 
